    * 0152 FIX: windows_updates: Added Error Handling (Thanks to Stefan Kick)...
    * 0810 FIX: fritz.link: Not inventorizing "unconfigured" interfaces anymore

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)
    * 0887 Add new column painter "Host Notifications Enabled"...

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0880 Added support for 389 Directory Server to LDAP connector
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0883 Added Date / Time to HTML notification email
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...

    Event Console:
    * 0885 New option for writing all messages into a syslog-like logfile...
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...
    * 0831 FIX: table statehist: no longer crashes on TIMEPERIOD TRANSITION entries with an invalid syntax...

    HW/SW-Inventory:
    * 0886 FIX: Fix exception on non-UTF-8 encoded characters in software list


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes
    * 0773 ibm_svc_system: new check for System Info of IBM SVC / V7000 devices
    * 0774 ibm_svc_nodestats.diskio: new check for disk troughput per node on IBM SVC / V7000 devices
    * 0775 ibm_svc_systemstats.diskio: new check for disk throughput in IBM SVC / V7000 devices in total